--- a/README.html
+++ b/README.html
@@ -19,7 +19,7 @@ location <span style="background-color: lightcyan"><code>c:\devapps</code></span
 <span style="background-color: lightcyan">c:\devapps\</span>python\setup
 </pre>
 
-<p>There will be some other guff like this README, you can ignore or detail that.</p>
+<p>There will be some other stuff like this README, you can ignore or detail that.</p>
 <h2>Step 3</h2>
 <p>Download the version of Anaconda/Miniconda you wish to install from the <a href="https://repo.continuum.io/archive/">Anaconda archive</a> or <a href="https://repo.continuum.io/miniconda/">Miniconda archive</a>, and place it in the <code><span style="background-color: lightcyan">c:\devapps</span>\python\setup</code> folder, e.g.:</p>
 <pre>
