--- a/README.html
+++ b/README.html
@@ -6,20 +6,20 @@
 location <span style="background-color: lightcyan"><code>c:\devapps</code></span>.</p>
 <p>I believe you can use this path with needing to contact the Helpdesk.</p>
 <h2>Step 2</h2>
-<p>Download and unzip the contents of this repository into that location, so that you end up with at least these files:</p>
+<p>Create these folders if they don't already exist:</p>
 <pre>
-<span style="background-color: lightcyan">c:\devapps\</span>init.cmd
-<span style="background-color: lightcyan">c:\devapps\</span>install_hook.bat
-</pre>
-
-<p>And these folder paths should also exist (create them if necessary):</p>
-<pre>
+<span style="background-color: lightcyan">c:\devapps</span>
 <span style="background-color: lightcyan">c:\devapps\</span>temp
 <span style="background-color: lightcyan">c:\devapps\</span>python
 <span style="background-color: lightcyan">c:\devapps\</span>python\setup
 </pre>
 
-<p>There will be some other stuff like this README, you can ignore or detail that.</p>
+<p>Download these files into these locations:</p>
+<pre>
+<a href="https://raw.githubusercontent.com/kinverarity1/anaconda-restricted-execution-rights/master/init.cmd"><span style="background-color: lightcyan">c:\devapps\</span>init.cmd</a>
+<a href="https://raw.githubusercontent.com/kinverarity1/anaconda-restricted-execution-rights/master/install_hook.bat"><span style="background-color: lightcyan">c:\devapps\</span>install_hook.bat</a>
+</pre>
+
 <h2>Step 3</h2>
 <p>Download the version of Anaconda/Miniconda you wish to install from the <a href="https://repo.continuum.io/archive/">Anaconda archive</a> or <a href="https://repo.continuum.io/miniconda/">Miniconda archive</a>, and place it in the <code><span style="background-color: lightcyan">c:\devapps</span>\python\setup</code> folder, e.g.:</p>
 <pre>
